<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>ru.fusionsoft</groupId>
	<artifactId>dbgit</artifactId>
	<version>0.3.1</version>
	<packaging>jar</packaging>
	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
<!--					<groups>none() | pgTest </groups>-->
<!--					<excludedGroups>any()</excludedGroups>-->
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M5</version>
			</plugin>

			<plugin>
				<!-- Build an executable JAR -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>ru.fusionsoft.dbgit.App</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.5</version>

				<configuration>
					<assembleDirectory>${project.build.directory}/dbgit</assembleDirectory>
					<programs>
						<program>
							<mainClass>ru.fusionsoft.dbgit.App</mainClass>
							<name>dbgit</name>
							<jvmSettings>
								<extraArguments>
									<extraArgument>-Dfile.encoding=UTF-8</extraArgument>
									<extraArgument>-Dlog4j.properties=false</extraArgument>
								</extraArguments>
							</jvmSettings>
						</program>
					</programs>

				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>

			</plugin>

		</plugins>

		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources/</directory>
				<includes><!-- what -->
					<include>logback.xml</include>
				</includes>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/resources/scripts</directory><!-- from -->
				<targetPath>${project.build.directory}/dbgit</targetPath><!-- to -->
				<includes><!-- what -->
					<include>dbgit-install-windows.bat</include>
					<include>dbgit-install-linux.sh</include>
					<include>dbgit-install-mac.sh</include>
					<include>INSTALLER-README.txt</include>
				</includes>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/resources/scripts</directory><!-- from -->
				<targetPath>${project.build.directory}/dbgit/bin</targetPath><!-- to -->
				<includes><!-- what -->
					<include>path-update.ps1</include>
					<include>git-download-x64.ps1</include>
					<include>git-download-x86.ps1</include>
					<include>path-parser.ps1</include>
				</includes>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/resources/lang</directory><!-- from -->
				<targetPath>${project.build.directory}/dbgit/lang</targetPath><!-- to -->
				<includes><!-- what -->
					<include>eng.yaml</include>
					<include>rus.yaml</include>
				</includes>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/resources/example</directory><!-- from -->
				<targetPath>${project.build.directory}/dbgit/example</targetPath><!-- to -->
				<includes><!-- what -->
					<include>.dblink</include>
				</includes>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/resources/</directory><!-- from -->
				<targetPath>${project.build.directory}/dbgit/</targetPath><!-- to -->
				<includes><!-- what -->
					<include>dbgitconfig</include>
				</includes>
			</resource>
		</resources>

	</build>

	<name>dbgit</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>


		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>1.20</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit</artifactId>
			<version>4.11.0.201803080745-r</version>
		</dependency>

		<dependency>
			<groupId>com.axiomalaska</groupId>
			<artifactId>jdbc-named-parameters</artifactId>
			<version>1.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.diogonunes/JCDP -->
		<dependency>
			<groupId>com.diogonunes</groupId>
			<artifactId>JCDP</artifactId>
			<version>2.0.3.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.5</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.4</version>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.junit.platform</groupId>-->
<!--			<artifactId>junit-platform-surefire-provider</artifactId>-->
<!--			<version>1.3.2</version>-->
<!--		</dependency>-->
		<!-- junit 5 engine -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.6.2</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.6.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.5</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.16</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.collections/google-collections -->
		<dependency>
			<groupId>com.google.collections</groupId>
			<artifactId>google-collections</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>org.ini4j</groupId>
			<artifactId>ini4j</artifactId>
			<version>0.5.1</version>
		</dependency>

		<dependency>
			<groupId>org.codehaus.janino</groupId>
			<artifactId>janino</artifactId>
			<version>3.0.6</version>
		</dependency>

		<dependency>
			<groupId>com.oracle.ojdbc</groupId>
			<artifactId>ojdbc8</artifactId>
			<version>19.3.0.0</version>
		</dependency>

		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<version>7.0.0.jre8</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>3.0.0</version>
		</dependency>


	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

</project>
